刪除舊 NetSqlAzMan Test project

--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -75,7 +75,7 @@
 			both client and server caching. You should use this key when you are delpoying a theme or	
 			a new custom control. The server and client caching are per site.
 		-->
-    <PrivateVersion Value="1" />
+    <PrivateVersion Value="2" />
     <!--
 			WEBGUI PRELOADING
 			Chaning the Mode to "On" enables icon preloading mechanism. This mainly prevents IE
@@ -114,6 +114,11 @@
 			1 - Enabled
 			-->
       <add name="VWG_DisableObscuringSwitch" value="1" />
+      <!--
+			0 - Disabled
+			1 - Enabled
+			-->
+      <add name="VWG_ShowDebuggerSwitch" value="0" />
     </switches>
   </system.diagnostics>
   <system.webServer>
