--- a/VWG.Community.CustomControl.Tester/VWG.Community.CustomControl.Tester.csproj
+++ b/VWG.Community.CustomControl.Tester/VWG.Community.CustomControl.Tester.csproj
@@ -80,6 +80,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UploadBoxTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UploadBoxTest.Designer.cs">
+      <DependentUpon>UploadBoxTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="XonomyBox_Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="UploadBoxTest.resx">
+      <DependentUpon>UploadBoxTest.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="XonomyBox_Test.resx">
       <DependentUpon>XonomyBox_Test.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -123,6 +133,10 @@
     <ProjectReference Include="..\VWG.Community.CustomControl\VWG.Community.CustomControl.csproj">
       <Project>{4BE7CB1E-0419-41E1-87BA-7677C2E23AEE}</Project>
       <Name>VWG.Community.CustomControl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VWG.Community.Forms\VWG.Community.Forms.csproj">
+      <Project>{431354e9-3e91-44d9-946b-1d312939c709}</Project>
+      <Name>VWG.Community.Forms</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
