--- a/VWG.Community.CustomControl.Tester/Web.config
+++ b/VWG.Community.CustomControl.Tester/Web.config
@@ -36,14 +36,15 @@
     <Applications>
       <Application Code="Form1" Type="VWG.Community.CustomControl.Tester.Form1, 'VWG.Community.CustomControl.Tester'" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="DropzoneTest" Type="VWG.Community.CustomControl.Tester.DropzoneTest, VWG.Community.CustomControl.Tester" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="UploadBoxTest" Type="VWG.Community.CustomControl.Tester.UploadBoxTest, VWG.Community.CustomControl.Tester" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
       This section registers controls so that the webgui server can expose there resources.
     -->
     <Controls>
       <Control Type="VWG.Community.CustomControl.DropzoneBox, VWG.Community.CustomControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
-      <Control Type="VWG.Community.CustomControl.UploadControl, VWG.Community.CustomControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.CustomControl.XonomyBox, VWG.Community.CustomControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     </Controls>
     <!--  WEBGUI THEMES MANAGEMENT
       Selected - The currently selected scheme
