delete project FormsTest

--- a/VWG.Community.CustomControl.Tester/Web.config
+++ b/VWG.Community.CustomControl.Tester/Web.config
@@ -42,6 +42,7 @@
       This section registers controls so that the webgui server can expose there resources.
     -->
     <Controls>
+      <Control Type="Gizmox.WebGUI.Forms.UploadControl, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
       <Control Type="VWG.Community.CustomControl.DropzoneBox, VWG.Community.CustomControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.CustomControl.XonomyBox, VWG.Community.CustomControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
