--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -1,23 +1,18 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <configSections>
     <section name="WebGUI" type="Gizmox.WebGUI.Common.Configuration.ConfigHandler, Gizmox.WebGUI.Common, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=263fa4ef694acff6" />
   </configSections>
-
   <WebGUI>
-
     <!-- The name of the application on VWG Administration Page -->
-    <ApplicationName Value="VWG.Community.FormsTest"/>
-
+    <ApplicationName Value="VWG.Community.FormsTest" />
     <!--
     WEBGUI ForceHTTPS
     Rewrite - will change the url to https
     Redirect - will change the url to https and will redirect it
     None - default value. the url will not change
     -->
-    <ForceHTTPS Value="None"/>
-
+    <ForceHTTPS Value="None" />
     <!--  WEBGUI AUTHENTICATION MANAGEMENT
 			This section defines the application authentication mode.
 			Example: 
@@ -29,10 +24,6 @@
 					A full type name to handle logon (This class should inherit from the LogonForm)
 		-->
     <!--Authentication Mode="Main" Type="Gizmox.WebGUI.Sample.Forms.Logon, Gizmox.WebGUI.Sample" /-->
-
-
-
-
     <!--  WEBGUI APPLICATION MANAGEMENT
 			This section maps pages to application forms.
 			Example: 
@@ -43,31 +34,22 @@
 				be handles by the given application form.
 		-->
     <Applications>
-      <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'"/>
+      <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'" />
     </Applications>
-
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
 		-->
     <Controls>
-      <!--
-      <Control Type="Gizmox.WebGUI.Forms.Catalog.Controls.WinPanel, Gizmox.WebGUI.Forms.Catalog" />
-      <Control Type="Gizmox.WebGUI.Forms.WorkspaceTabs, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
-      <Control Type="Gizmox.WebGUI.Forms.WatermarkTextBox, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
-      <Control Type="Gizmox.WebGUI.Forms.SurfacePanel, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
-      <Control Type="Gizmox.WebGUI.Forms.Editors.FCKEditor, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
-      <Control Type="Gizmox.WebGUI.Forms.Charts.Chart, Gizmox.WebGUI.Forms.Charts, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=f1bb83df6a8597fb" />
-      <Control Type="Gizmox.WebGUI.Forms.*, Gizmox.WebGUI.Forms.Office, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d50c2c7452ba77d9" />
-      -->
+      <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      <Control Type="Gizmox.WebGUI.Forms.UploadControl, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
     </Controls>
-
     <!--  WEBGUI THEMES MANAGEMENT
 			Selected - The currently selected scheme
 		-->
-    <Themes Selected="Default">
-      <!-- <Theme Name="MyTheme" Type="MyThemeAssembly" /> -->
+    <Themes Selected="Vista">
+      <Theme Name="Vista" Type="Gizmox.WebGUI.Forms.Themes.Vista, Gizmox.WebGUI.Forms.Themes, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=263fa4ef694acff6" MultiThemeSupport="Off" />
+      <Theme Name="Graphite" Type="Gizmox.WebGUI.Forms.Themes.Graphite, Gizmox.WebGUI.Forms.Themes, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=263fa4ef694acff6" MultiThemeSupport="Off" />
     </Themes>
-
     <!--  WebGUI RESOURCE MANAGEMENT
 			Icons		- This maps the icon directory (Absolute\Relative path).
 			Images		- This maps the images directory (Absolute\Relative path).
@@ -75,37 +57,32 @@
 			Data		- This maps the data directory which should contain data related files (Absolute\Relative path)  
 		-->
     <Directories>
-      <Directory Code="Icons"		Path="Resources\Icons" />
-      <Directory Code="Images"	Path="Resources\Images" />
-      <Directory Code="Generated"	Path="Resources\Generated" />
-      <Directory Code="UserData"	Path="Resources\UserData" />
+      <Directory Code="Icons" Path="Resources\Icons" />
+      <Directory Code="Images" Path="Resources\Images" />
+      <Directory Code="Generated" Path="Resources\Generated" />
+      <Directory Code="UserData" Path="Resources\UserData" />
     </Directories>
-
     <!-- WEBGUI STATIC RESOURCES MANAGMENT
 			The mechanism should be used in a deployment scenario to boost performance. The static
 			resoruces mode creates a directory named "Route" and with in it files that are accessed
 			directly using the web server instead of dynamicly generated files. You should check that
 			there the site can write to that directory.
 		-->
-    <StaticResources Mode="Off"/>
-
+    <StaticResources Mode="Off" />
     <!--
 			WEBGUI PRIVATE VERSION
 			Adds the private version key to the caching key. This key provides a mechanism to invalidate
 			both client and server caching. You should use this key when you are delpoying a theme or	
 			a new custom control. The server and client caching are per site.
 		-->
-    <PrivateVersion Value="1"/>
-
-
+    <PrivateVersion Value="1" />
     <!--
 			WEBGUI PRELOADING
 			Chaning the Mode to "On" enables icon preloading mechanism. This mainly prevents IE
 			loading the same image multiple times.
 		-->
-    <IconsPreloading Mode="Off"/>
+    <IconsPreloading Mode="Off" />
   </WebGUI>
-
   <system.diagnostics>
     <switches>
       <!--
@@ -126,35 +103,30 @@
       <!--
 			Disables the caching of Visual WebGui resources
 			-->
-      <add name="VWG_DisableCachingSwitch" value="0"/>
+      <add name="VWG_DisableCachingSwitch" value="0" />
       <!--
 			Disables client sources obscuring (Mainly for debugging and developing purposes)
 			0 - Disabled
 			1 - Enabled
 			-->
-      <add name="VWG_DisableObscuringSwitch" value="0" />
+      <add name="VWG_DisableObscuringSwitch" value="1" />
     </switches>
   </system.diagnostics>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="wgx" verb="*" preCondition="integratedMode" path="*.wgx" type="Gizmox.WebGUI.Server.Router,Gizmox.WebGUI.Server,Version=4.5.25701.0,Culture=neutral,PublicKeyToken=3de6eb684226c24d" />
     </handlers>
   </system.webServer>
-
   <system.web>
     <!-- Uncomment the following line for debugging purposes -->
     <!--<httpRuntime requestValidationMode="2.0"/>-->
-
     <httpHandlers>
-
       <!--  WebGUI ROUTER HANDLER
 				This http handler routes the requests to Modules/Icons/Images/Css/Xslt/Resoureces.
 				Client events are sinked through this router as well.
 			-->
       <add verb="*" path="*.wgx" type="Gizmox.WebGUI.Server.Router,Gizmox.WebGUI.Server,Version=4.5.25701.0,Culture=neutral,PublicKeyToken=3de6eb684226c24d" />
-
     </httpHandlers>
     <!--  DYNAMIC DEBUG COMPILATION
           Set compilation debug="true" to enable ASPX debugging.  Otherwise, setting this value to
@@ -165,11 +137,7 @@
           false at all other times. For more information, refer to the documentation about
           debugging ASP.NET files.
     -->
-    <compilation
-         defaultLanguage="c#"
-         debug="true"
-    />
-
+    <compilation defaultLanguage="c#" debug="true" />
     <!--  CUSTOM ERROR MESSAGES
           Set customErrors mode="On" or "RemoteOnly" to enable custom error messages, "Off" to disable. 
           Add <error> tags for each of the errors you want to handle.
@@ -180,10 +148,7 @@
            on the local Web server. This setting is recommended for security purposes, so 
            that you do not display application detail information to remote clients.
     -->
-    <customErrors
-    mode="RemoteOnly"
-    />
-
+    <customErrors mode="RemoteOnly" />
     <!--  AUTHENTICATION 
           This section sets the authentication policies of the application. Possible modes are "Windows", 
           "Forms", "Passport" and "None"
@@ -197,13 +162,11 @@
            by Microsoft that offers a single logon and core profile services for member sites.
     -->
     <authentication mode="Windows" />
-
     <!--  AUTHORIZATION 
           This section sets the authorization policies of the application. You can allow or deny access
           to application resources by user or role. Wildcards: "*" mean everyone, "?" means anonymous 
           (unauthenticated) users.
     -->
-
     <authorization>
       <allow users="*" />
       <!-- Allow all users -->
@@ -213,7 +176,6 @@
                              roles="[comma separated list of roles]"/>
             -->
     </authorization>
-
     <!--  APPLICATION-LEVEL TRACE LOGGING
           Application-level tracing enables trace log output for every page within an application. 
           Set trace enabled="true" to enable application trace logging.  If pageOutput="true", the
@@ -221,35 +183,16 @@
           application trace log by browsing the "trace.axd" page from your web application
           root. 
     -->
-    <trace
-        enabled="false"
-        requestLimit="10"
-        pageOutput="false"
-        traceMode="SortByTime"
-		localOnly="true"
-    />
-
+    <trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true" />
     <!--  SESSION STATE SETTINGS
           By default ASP.NET uses cookies to identify which requests belong to a particular session. 
           If cookies are not available, a session can be tracked by adding a session identifier to the URL. 
           To disable cookies, set sessionState cookieless="true".
     -->
-    <sessionState
-            mode="InProc"
-            stateConnectionString="tcpip=127.0.0.1:42424"
-            sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes"
-            cookieless="false"
-            timeout="20"
-    />
-
+    <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes" cookieless="false" timeout="20" />
     <!--  GLOBALIZATION
           This section sets the globalization settings of the application. 
     -->
-    <globalization
-            requestEncoding="utf-8"
-            responseEncoding="utf-8"
-   />
-
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
   </system.web>
-
 </configuration>
