正名，用 UploadBoxText.cs 嚟測試 UploadBox

--- a/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
+++ b/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
@@ -85,13 +85,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="UploadBoxTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UploadBoxTest.Designer.cs">
+      <DependentUpon>UploadBoxTest.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="UploadBoxTest.resx">
+      <DependentUpon>UploadBoxTest.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="README.md" />
     <None Include="Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
