--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -34,7 +34,8 @@
 				be handles by the given application form.
 		-->
     <Applications>
-      <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'" />
+      <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="UploadBoxTest" Type="VWG.Community.FormsTest.UploadBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
@@ -75,7 +76,7 @@
 			both client and server caching. You should use this key when you are delpoying a theme or	
 			a new custom control. The server and client caching are per site.
 		-->
-    <PrivateVersion Value="1" />
+    <PrivateVersion Value="2" />
     <!--
 			WEBGUI PRELOADING
 			Chaning the Mode to "On" enables icon preloading mechanism. This mainly prevents IE
