--- a/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
+++ b/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
@@ -77,13 +77,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Readme.txt" />
+    <Content Include="Resources\UserData\SampleDocSpec.js" />
+    <Content Include="Resources\UserData\SampleXmlData.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="XonomyBoxTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="XonomyBoxTest.Designer.cs">
+      <DependentUpon>XonomyBoxTest.cs</DependentUpon>
     </Compile>
     <Compile Include="UploadBoxTest.cs">
       <SubType>Form</SubType>
@@ -91,8 +93,8 @@
     <Compile Include="UploadBoxTest.Designer.cs">
       <DependentUpon>UploadBoxTest.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="XonomyBoxTest.resx">
+      <DependentUpon>XonomyBoxTest.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -115,7 +117,6 @@
     <Folder Include="Resources\Generated\" />
     <Folder Include="Resources\Icons\" />
     <Folder Include="Resources\Images\" />
-    <Folder Include="Resources\UserData\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VWG.Community.Forms\VWG.Community.Forms.csproj">
