--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -36,6 +36,7 @@
     <Applications>
       <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="UploadBoxTest" Type="VWG.Community.FormsTest.UploadBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="XonomyBoxTest" Type="VWG.Community.FormsTest.XonomyBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
@@ -43,6 +44,7 @@
     <Controls>
       <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="Gizmox.WebGUI.Forms.UploadControl, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
+      <Control Type="VWG.Community.Forms.XonomyBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
     </Controls>
     <!--  WEBGUI THEMES MANAGEMENT
 			Selected - The currently selected scheme
@@ -76,7 +78,7 @@
 			both client and server caching. You should use this key when you are delpoying a theme or	
 			a new custom control. The server and client caching are per site.
 		-->
-    <PrivateVersion Value="2" />
+    <PrivateVersion Value="3" />
     <!--
 			WEBGUI PRELOADING
 			Chaning the Mode to "On" enables icon preloading mechanism. This mainly prevents IE
@@ -111,6 +113,11 @@
 			1 - Enabled
 			-->
       <add name="VWG_DisableObscuringSwitch" value="1" />
+      <!--
+			0 - Disabled
+			1 - Enabled
+			-->
+      <add name="VWG_ShowDebuggerSwitch" value="0" />
     </switches>
   </system.diagnostics>
   <system.webServer>
