--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -37,11 +37,13 @@
       <Application Code="Form1" Type="VWG.Community.FormsTest.Form1, 'VWG.Community.FormsTest'" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="UploadBoxTest" Type="VWG.Community.FormsTest.UploadBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="XonomyBoxTest" Type="VWG.Community.FormsTest.XonomyBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="TreantBoxTest" Type="VWG.Community.FormsTest.TreantBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
 		-->
     <Controls>
+      <Control Type="VWG.Community.Forms.TreantBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="Gizmox.WebGUI.Forms.UploadControl, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
       <Control Type="VWG.Community.Forms.XonomyBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
