--- a/VWG.Community.Forms/VWG.Community.Forms.csproj
+++ b/VWG.Community.Forms/VWG.Community.Forms.csproj
@@ -62,6 +62,15 @@
     <Compile Include="Helper\ImageUploaderFile.cs" />
     <Compile Include="Helper\UploadBoxHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreantBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TreantBox.designer.cs">
+      <DependentUpon>TreantBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TreantBoxSkin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UploadBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -77,6 +86,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="TreantBoxSkin.resx">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Upload\UploadBox.png" />
     <EmbeddedResource Include="Upload\UploadBox.bmp" />
     <EmbeddedResource Include="XonomyBoxSkin.resx">
@@ -91,6 +103,28 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="TreantBox.bmp" />
+    <Content Include="TreantBoxSkin.data-dynamic.css">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.data-dynamic.js">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.Treant.css">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.Treant.js">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.TreantBox.html">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.TreantBox.js">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
+    <Content Include="TreantBoxSkin.TreantBox.xslt">
+      <DependentUpon>TreantBoxSkin.cs</DependentUpon>
+    </Content>
     <Content Include="UploadBoxSkin.jquery.fileupload.js">
       <DependentUpon>UploadBoxSkin.cs</DependentUpon>
     </Content>
