--- a/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
+++ b/VWG.Community.FormsTest/VWG.Community.FormsTest.csproj
@@ -81,6 +81,12 @@
     <Content Include="Resources\UserData\SampleXmlData.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TreantBoxTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TreantBoxTest.Designer.cs">
+      <DependentUpon>TreantBoxTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="XonomyBoxTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,10 @@
     <Compile Include="UploadBoxTest.Designer.cs">
       <DependentUpon>UploadBoxTest.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TreantBoxTest.resx">
+      <DependentUpon>TreantBoxTest.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="XonomyBoxTest.resx">
       <DependentUpon>XonomyBoxTest.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -105,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="README.md" />
+    <Content Include="Resources\UserData\json-data-sample.json" />
     <None Include="Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
