TreantBox 完成，image url 都解決埋

--- a/VWG.Community.Forms/VWG.Community.Forms.csproj
+++ b/VWG.Community.Forms/VWG.Community.Forms.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Helper\ColorHelper.cs" />
     <Compile Include="Helper\ImageUploaderFile.cs" />
     <Compile Include="Helper\UploadBoxHelper.cs" />
+    <Compile Include="Helper\VwgHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreantBox.cs">
       <SubType>Component</SubType>
