增加 OpenCC.dll Wrapper 中中轉換

--- a/VWG.Community.UtilTest/VWG.Community.UtilTest.csproj
+++ b/VWG.Community.UtilTest/VWG.Community.UtilTest.csproj
@@ -103,6 +103,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CountryCodes.resx">
       <DependentUpon>CountryCodes.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -111,7 +116,21 @@
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Compile Include="OpenCCTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OpenCCTest.Designer.cs">
+      <DependentUpon>OpenCCTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="OpenCCTest.resx">
+      <DependentUpon>OpenCCTest.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -124,6 +143,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Helper\" />
     <Folder Include="Resources\Generated\" />
     <Folder Include="Resources\Icons\" />
     <Folder Include="Resources\Images\" />
