--- a/VWG.Community.UtilTest/Web.config
+++ b/VWG.Community.UtilTest/Web.config
@@ -1,15 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <configSections>
     <section name="WebGUI" type="Gizmox.WebGUI.Common.Configuration.ConfigHandler, Gizmox.WebGUI.Common, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=263fa4ef694acff6" />
   </configSections>
-
   <WebGUI>
-
     <!-- The name of the application on VWG Administration Page -->
     <ApplicationName Value="VWG.Community.UtilTest" />
-
     <!--
     WEBGUI ForceHTTPS
     Rewrite - will change the url to https
@@ -17,7 +13,6 @@
     None - default value. the url will not change
     -->
     <ForceHTTPS Value="None" />
-
     <!--  WEBGUI AUTHENTICATION MANAGEMENT
 			This section defines the application authentication mode.
 			Example: 
@@ -29,10 +24,6 @@
 					A full type name to handle logon (This class should inherit from the LogonForm)
 		-->
     <!--Authentication Mode="Main" Type="Gizmox.WebGUI.Sample.Forms.Logon, Gizmox.WebGUI.Sample" /-->
-
-
-
-
     <!--  WEBGUI APPLICATION MANAGEMENT
 			This section maps pages to application forms.
 			Example: 
@@ -43,9 +34,9 @@
 				be handles by the given application form.
 		-->
     <Applications>
-      <Application Code="Form1" Type="VWG.Community.UtilTest.Form1, 'VWG.Community.UtilTest'" />
+      <Application Code="Form1" Type="VWG.Community.UtilTest.Form1, 'VWG.Community.UtilTest'" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="OpenCCTest" Type="VWG.Community.UtilTest.OpenCCTest, VWG.Community.UtilTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
-
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
 		-->
@@ -60,14 +51,12 @@
       <Control Type="Gizmox.WebGUI.Forms.*, Gizmox.WebGUI.Forms.Office, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d50c2c7452ba77d9" />
       -->
     </Controls>
-
     <!--  WEBGUI THEMES MANAGEMENT
 			Selected - The currently selected scheme
 		-->
     <Themes Selected="Default">
       <!-- <Theme Name="MyTheme" Type="MyThemeAssembly" /> -->
     </Themes>
-
     <!--  WebGUI RESOURCE MANAGEMENT
 			Icons		- This maps the icon directory (Absolute\Relative path).
 			Images		- This maps the images directory (Absolute\Relative path).
@@ -80,7 +69,6 @@
       <Directory Code="Generated" Path="Resources\Generated" />
       <Directory Code="UserData" Path="Resources\UserData" />
     </Directories>
-
     <!-- WEBGUI STATIC RESOURCES MANAGMENT
 			The mechanism should be used in a deployment scenario to boost performance. The static
 			resoruces mode creates a directory named "Route" and with in it files that are accessed
@@ -88,7 +76,6 @@
 			there the site can write to that directory.
 		-->
     <StaticResources Mode="Off" />
-
     <!--
 			WEBGUI PRIVATE VERSION
 			Adds the private version key to the caching key. This key provides a mechanism to invalidate
@@ -96,8 +83,6 @@
 			a new custom control. The server and client caching are per site.
 		-->
     <PrivateVersion Value="1" />
-
-
     <!--
 			WEBGUI PRELOADING
 			Chaning the Mode to "On" enables icon preloading mechanism. This mainly prevents IE
@@ -105,7 +90,6 @@
 		-->
     <IconsPreloading Mode="Off" />
   </WebGUI>
-
   <system.diagnostics>
     <switches>
       <!--
@@ -135,26 +119,21 @@
       <add name="VWG_DisableObscuringSwitch" value="0" />
     </switches>
   </system.diagnostics>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="wgx" verb="*" preCondition="integratedMode" path="*.wgx" type="Gizmox.WebGUI.Server.Router,Gizmox.WebGUI.Server,Version=4.5.25701.0,Culture=neutral,PublicKeyToken=3de6eb684226c24d" />
     </handlers>
   </system.webServer>
-
   <system.web>
     <!-- Uncomment the following line for debugging purposes -->
     <!--<httpRuntime requestValidationMode="2.0"/>-->
-
     <httpHandlers>
-
       <!--  WebGUI ROUTER HANDLER
 				This http handler routes the requests to Modules/Icons/Images/Css/Xslt/Resoureces.
 				Client events are sinked through this router as well.
 			-->
       <add verb="*" path="*.wgx" type="Gizmox.WebGUI.Server.Router,Gizmox.WebGUI.Server,Version=4.5.25701.0,Culture=neutral,PublicKeyToken=3de6eb684226c24d" />
-
     </httpHandlers>
     <!--  DYNAMIC DEBUG COMPILATION
           Set compilation debug="true" to enable ASPX debugging.  Otherwise, setting this value to
@@ -166,7 +145,6 @@
           debugging ASP.NET files.
     -->
     <compilation defaultLanguage="c#" debug="true" />
-
     <!--  CUSTOM ERROR MESSAGES
           Set customErrors mode="On" or "RemoteOnly" to enable custom error messages, "Off" to disable. 
           Add <error> tags for each of the errors you want to handle.
@@ -178,7 +156,6 @@
            that you do not display application detail information to remote clients.
     -->
     <customErrors mode="RemoteOnly" />
-
     <!--  AUTHENTICATION 
           This section sets the authentication policies of the application. Possible modes are "Windows", 
           "Forms", "Passport" and "None"
@@ -192,13 +169,11 @@
            by Microsoft that offers a single logon and core profile services for member sites.
     -->
     <authentication mode="Windows" />
-
     <!--  AUTHORIZATION 
           This section sets the authorization policies of the application. You can allow or deny access
           to application resources by user or role. Wildcards: "*" mean everyone, "?" means anonymous 
           (unauthenticated) users.
     -->
-
     <authorization>
       <allow users="*" />
       <!-- Allow all users -->
@@ -208,7 +183,6 @@
                              roles="[comma separated list of roles]"/>
             -->
     </authorization>
-
     <!--  APPLICATION-LEVEL TRACE LOGGING
           Application-level tracing enables trace log output for every page within an application. 
           Set trace enabled="true" to enable application trace logging.  If pageOutput="true", the
@@ -217,34 +191,23 @@
           root. 
     -->
     <trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true" />
-
     <!--  SESSION STATE SETTINGS
           By default ASP.NET uses cookies to identify which requests belong to a particular session. 
           If cookies are not available, a session can be tracked by adding a session identifier to the URL. 
           To disable cookies, set sessionState cookieless="true".
     -->
     <sessionState mode="InProc" stateConnectionString="tcpip=127.0.0.1:42424" sqlConnectionString="data source=127.0.0.1;Trusted_Connection=yes" cookieless="false" timeout="20" />
-
     <!--  GLOBALIZATION
           This section sets the globalization settings of the application. 
     -->
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
-
   </system.web>
-
   <runtime>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
       <dependentAssembly>
-
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
-
       </dependentAssembly>
-
     </assemblyBinding>
-
   </runtime>
 </configuration>
