--- a/VWG.Community.RsourcesTest/Web.config
+++ b/VWG.Community.RsourcesTest/Web.config
@@ -8,7 +8,7 @@
   <WebGUI>
 
     <!-- The name of the application on VWG Administration Page -->
-    <ApplicationName Value="VWG.Community.RsourcesTest"/>
+    <ApplicationName Value="VWG.Community.ResourcesTest"/>
 
     <!--
     WEBGUI ForceHTTPS
@@ -43,7 +43,7 @@
 				be handles by the given application form.
 		-->
     <Applications>
-      <Application Code="Form1" Type="VWG.Community.RsourcesTest.Form1, 'VWG.Community.RsourcesTest'"/>
+      <Application Code="Form1" Type="VWG.Community.ResourcesTest.Form1, 'VWG.Community.ResourcesTest'"/>
     </Applications>
 
     <!--  WEBGUI CONTROL MANAGEMENT 
