--- a/VWG.Community.RsourcesTest/VWG.Community.ResourcesTest.csproj
+++ b/VWG.Community.RsourcesTest/VWG.Community.ResourcesTest.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{563295b5-8906-4a76-be2d-ff8e711c1204};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VWG.Community.RsourcesTest</RootNamespace>
-    <AssemblyName>VWG.Community.RsourcesTest</AssemblyName>
+    <RootNamespace>VWG.Community.ResourcesTest</RootNamespace>
+    <AssemblyName>VWG.Community.ResourcesTest</AssemblyName>
     <StartPageUrl>Form1.wgx</StartPageUrl>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
