--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -38,6 +38,9 @@
       <Application Code="UploadBoxTest" Type="VWG.Community.FormsTest.UploadBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="XonomyBoxTest" Type="VWG.Community.FormsTest.XonomyBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="TreantBoxTest" Type="VWG.Community.FormsTest.TreantBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="PagerBoxTest" Type="VWG.Community.FormsTest.PagerBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="PivotTableBoxTest" Type="VWG.Community.FormsTest.PivotTableBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="MessageBox2Test" Type="VWG.Community.FormsTest.MessageBox2Test, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
