--- a/VWG.Community.FormsTest/Web.config
+++ b/VWG.Community.FormsTest/Web.config
@@ -42,6 +42,7 @@
       <Application Code="PivotTableBoxTest" Type="VWG.Community.FormsTest.PivotTableBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="MessageBox2Test" Type="VWG.Community.FormsTest.MessageBox2Test, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
       <Application Code="EChartsBoxTest" Type="VWG.Community.FormsTest.EChartsBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
+      <Application Code="EChartsGMapBoxTest" Type="VWG.Community.FormsTest.EChartsGMapBoxTest, VWG.Community.FormsTest" Authentication="Default" Stateless="False" ForceSSL="False" />
     </Applications>
     <!--  WEBGUI CONTROL MANAGEMENT 
 			This section registers controls so that the webgui server can expose there resources.
@@ -49,6 +50,7 @@
     <Controls>
       <Control Type="Gizmox.WebGUI.Forms.UploadControl, Gizmox.WebGUI.Forms.Extended, Version=4.5.25701.0, Culture=neutral, PublicKeyToken=85eae29607c9f5f3" />
       <Control Type="VWG.Community.Forms.EChartsBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      <Control Type="VWG.Community.Forms.EChartsGMapBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.Forms.TreantBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.Forms.UploadBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
       <Control Type="VWG.Community.Forms.XonomyBox, VWG.Community.Forms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
