補番 miss 咗嘅 VisualMap.cs

--- a/VWG.Community.Forms/VWG.Community.Forms.csproj
+++ b/VWG.Community.Forms/VWG.Community.Forms.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Model\ECharts\ToolTip.cs" />
     <Compile Include="Model\ECharts\TreeData.cs" />
     <Compile Include="Model\ECharts\VisualItem.cs" />
+    <Compile Include="Model\ECharts\VisualMap.cs" />
     <Compile Include="PagerBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
